@@ -5,6 +5,7 @@ import lombok.*;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Data
 @Builder
@@ -20,22 +21,12 @@ public class NewsImageDTO {
     private News news;
 
     public String getImageURL(){
-        try {
-            return URLEncoder.encode(path + "/" + "uuid" + "_" + imgName, "UTF-8");
-        } catch (UnsupportedEncodingException e){
-            e.printStackTrace();
-        }
+        return URLEncoder.encode(path + "/" + "uuid" + "_" + imgName, StandardCharsets.UTF_8);
 
-        return "";
     }
 
     public String getThumbnailURL(){
-        try {
-            return URLEncoder.encode(path + "/s_" + uuid + "_" + imgName, "UTF-8");
-        } catch (UnsupportedEncodingException e){
-            e.printStackTrace();
-        }
+        return URLEncoder.encode(path + "/s_" + uuid + "_" + imgName, StandardCharsets.UTF_8);
 
-        return "";
     }
 }
